<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/logo_desc"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/title_01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/title01"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app" />

    <EditText
        android:id="@+id/choose_01"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/default_number"
        android:inputType="number"
        android:textColorHint="@color/colorDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_01" />

    <EditText
        android:id="@+id/choose_02"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/default_number"
        android:inputType="number"
        android:textColorHint="@color/colorDark"
        app:layout_constraintStart_toEndOf="@+id/choose_01"
        app:layout_constraintTop_toBottomOf="@+id/title_01" />

    <EditText
        android:id="@+id/choose_03"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/default_number"
        android:inputType="number"
        android:textColorHint="@color/colorDark"
        app:layout_constraintStart_toEndOf="@+id/choose_02"
        app:layout_constraintTop_toBottomOf="@+id/title_01" />

    <EditText
        android:id="@+id/choose_04"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/default_number"
        android:inputType="number"
        android:textColorHint="@color/colorDark"
        app:layout_constraintStart_toEndOf="@+id/choose_03"
        app:layout_constraintTop_toBottomOf="@+id/title_01" />

    <EditText
        android:id="@+id/choose_05"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/default_number"
        android:inputType="number"
        android:textColorHint="@color/colorDark"
        app:layout_constraintStart_toEndOf="@+id/choose_04"
        app:layout_constraintTop_toBottomOf="@+id/title_01" />

    <Button
        android:id="@+id/btn_sort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:onClick="drawNumbers"
        android:text="@string/btn_text"
        android:textColor="@color/colorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_01" />

    <TextView
        android:id="@+id/title_02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/title02"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sort" />

    <TextView
        android:id="@+id/extraction_01"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:text="@string/default_number"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_02" />

    <TextView
        android:id="@+id/extraction_02"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:text="@string/default_number"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/extraction_01"
        app:layout_constraintTop_toBottomOf="@+id/title_02" />

    <TextView
        android:id="@+id/extraction_03"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:text="@string/default_number"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/extraction_02"
        app:layout_constraintTop_toBottomOf="@+id/title_02"/>

    <TextView
        android:id="@+id/extraction_04"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:text="@string/default_number"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/extraction_03"
        app:layout_constraintTop_toBottomOf="@+id/title_02"/>

    <TextView
        android:id="@+id/extraction_05"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:text="@string/default_number"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/extraction_04"
        app:layout_constraintTop_toBottomOf="@+id/title_02" />

    <TextView
        android:id="@+id/title_03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/title03"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extraction_01" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="30dp"
        android:paddingEnd="30dp"
        android:text="@string/default_result"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_03" />


</androidx.constraintlayout.widget.ConstraintLayout>